syntax = "proto3";

package tribbae.v1;

import "google/api/annotations.proto";

option go_package = "github.com/tribbae/backend/gen/tribbae/v1;tribbaev1";

// --- Messages ---

message RegisterRequest {
  string email = 1;
  string password = 2;
  string display_name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string token = 2;
  bool is_admin = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string token = 2;
  string display_name = 3;
  bool is_admin = 4;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string token = 1;
}

// --- Service ---

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/auth/register"
      body: "*"
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/auth/refresh"
      body: "*"
    };
  }
}
